syntax = "proto3";

option go_package = "/pb";

package pb;

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string phoneNumber = 4;
    int64 createdAt = 5;
    int64 updatedAt = 6;
}

message CreateUserRequest {
    string username = 2;
    string password = 3;
    string email = 4;
    string phoneNumber = 5;
}

message GetUserRequest {
    string id = 1;
}

message UpdateUserRequest {
    string id = 1;
    string username = 2;
    string email = 3;
    string phoneNumber = 4;
}

message ListUsersRequest {}

message DeleteUserResponse {
    string id = 1;
}

service UsersService {
    rpc CreateUser(CreateUserRequest) returns (User);
    rpc GetUser(GetUserRequest) returns (User);
    rpc DeleteUser(GetUserRequest) returns (DeleteUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (User);
    rpc ListUser(ListUsersRequest) returns (stream User);
}